fix for font size being too large in landscape mode on iphone safari browser

--- a/generic-styles/index.less
+++ b/generic-styles/index.less
@@ -28,6 +28,9 @@
       margin-inline-start: 0;
     }
   }
+  html {
+    -webkit-text-size-adjust: 100%;
+  }
   code {
     color: #c7254e;
     background-color: #f9f2f4;
